--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "63ebeb15",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
     "OUT_COMPACT_T  = \"tiles_predictions_compact.txt\"\n",
     "OUT_EVAL       = \"tiles_predictions_eval.csv\"\n",
     "FLAGS_ONLY_OUT = \"tiles_flags_only.csv\"\n",
-    "BUNDLE_PATH    = \"tile_models_bundle.joblib\"\n",
+    "BUNDLE_PATH    = \"ml_model.joblib\"\n",
     "\n",
     "# -----------------------\n",
     "# HELPERS\n",
@@ -203,7 +203,7 @@
     "    num_cols = [c for c in feat_cols if c not in cat_cols]\n",
     "    cat_pipe = Pipeline([\n",
     "        (\"impute\", SimpleImputer(strategy=\"most_frequent\")),\n",
-    "        (\"ohe\",    OneHotEncoder(handle_unknown=\"ignore\", sparse_out=False)),\n",
+    "        (\"ohe\",    OneHotEncoder(handle_unknown=\"ignore\", sparse=False)),\n",
     "    ])\n",
     "    num_pipe = Pipeline([\n",
     "        (\"impute\", SimpleImputer(strategy=\"median\")),\n",
@@ -621,8 +621,27 @@
     "    }\n",
     "}\n",
     "joblib.dump(bundle, BUNDLE_PATH)\n",
-    "joblib.dump(bundle, \"ml_model2.joblib\")  # optional for Pyodide UI\n",
+    "joblib.dump(bundle, \"ml_model.joblib\")  # optional for Pyodide UI\n",
     "print(f\"\\nSaved model bundle → {BUNDLE_PATH}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a391f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# load\n",
+    "eval_df = pd.read_csv(\"tiles_predictions_eval.csv\")\n",
+    "compact_df = pd.read_csv(\"tiles_predictions_compact.csv\")\n",
+    "\n",
+    "print(\"Loaded\", len(eval_df), \"evaluation rows\")\n",
+    "print(eval_df.head())\n"
    ]
   }
  ],
