--- a/ml_model.ipynb
+++ b/ml_model.ipynb
@@ -610,7 +610,7 @@
     "    },\n",
     "    \"config\": {\n",
     "        \"THRESHOLD_MARGIN\": THRESHOLD_MARGIN,\n",
-    "        \"SORT_MIN\": SORT_MIN,\n",
+    "        \"SORT_MIN\": SORTa_MIN,\n",
     "        \"SORT_DEFAULT\": SORT_DEFAULT,\n",
     "        \"SORT_MAX\": SORT_MAX\n",
     "    },\n",
